--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,11 @@
 #
 #Wed Jan 13 00:05:07 GMT 2016
-version=1.1
+version=1.2
 dir_forgecraft=D\:/Seafile/incoming/ForgeCraft2/mods
+mc_mappings=snapshot_20160518
 dir_output=../Build Output/MineTunes/
-mc_version=1.8.9
-forge_version=11.15.0.1689
+mc_version=1.9.4
+forge_version=12.17.0.1909
 dir_repo=./
 build_number=7
 mod_name=MineTunes
