--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,9 @@ group = "vazkii.minetunes" // http://maven.apache.org/guides/mini/guide-naming-c
 archivesBaseName = config.mod_name
 
 minecraft {
-    version = "${config.mc_version}-${config.forge_version}"
+    version = "${config.mc_version}-${config.forge_version}-${config.mc_version}"
     runDir = "eclipse/assets"
-    mappings = "snapshot_20151230"
+    mappings = config.mc_mappings
 
     //This, does the token replacement.
     //Though, I reccomend this to be replaced with a token such as @VERSION@
