--- a/build.properties
+++ b/build.properties
@@ -1,11 +1,12 @@
 #
-#Wed Jun 15 18:27:17 BST 2016
+#Fri Jun 24 16:47:46 BST 2016
 mod_name=MineTunes
-forge_version=12.17.0.1909
+forge_version=12.18.0.1986
+mc_version_suffix=1.10.0
 dir_repo=./
 dir_forgecraft=D\:/Seafile/incoming/ForgeCraft2/mods
 mc_mappings=snapshot_20160518
 version=1.2
 dir_output=../Build Output/MineTunes/
-mc_version=1.9.4
-build_number=9
+build_number=10
+mc_version=1.10
