--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
+## project stuff
+/versions.json
+
+## Windows
 Thumbs.db
 
 ## gradle
 /.gradle
 /build
+/gradle
+/gradlew
+/gradlew.bat
 
 ## ForgeGradle
 /run
@@ -12,12 +19,17 @@ Thumbs.db
 /.metadata
 /.classpath
 /.project
+/eclipse
 /bin
+/.launch
 
 ## intellij
 /out
 /.idea
 /atlassian-ide-plugin.xml
+/*.ipr
+/*.iws
+/*.iml
 
 ## Private Stuffs
 /private.properties
@@ -25,3 +37,37 @@ Thumbs.db
 ## Jars
 *.jar
 !/gradle/wrapper/gradle-wrapper.jar
+
+### OSX (adds a lot of garbage)###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+## Icon must end with two \r
+Icon
+
+
+## Thumbnails
+._*
+
+## Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+## Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+## ARL Symlinks
+/src/api/
+
+## Others
+classes/
+run
